fixed a minor card alignment issue

--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -100,6 +100,7 @@ a i {
             box-shadow: 5px 5px 15px 9px rgb(224 213 231 / 25%);
             border: none !important;
             transition: 0.5s ease-out;
+            margin-bottom: 1.6rem;
             &:hover {
                 transition: 0.2s ease;
                 cursor: pointer;
